
Release 3.3.0 - Month XX 2025
-----------------------------

* Added the :func:`set_zoom_to_fit()` method for chartsheets. It ensures that a
  chartsheet is zoomed automatically by Excel to fit the screen even when the
  window is resized.


Release 3.2.9 - September 16 2025
---------------------------------

* Removed the `py.typed` file since it was causing a lot of downstream CI
  failures where consumers weren't handling the xlsxwriter types correctly or
  taking them into account.

  The file will be re-added once the xlsxwriter typing is more comprehensive.


Release 3.2.8 - September 14 2025
---------------------------------

* Fixed ``mypy`` implicit export error caused by the ``Workbook()`` type
  annotations changes in v3.2.7 and v3.2.6.

  :issue:`1154`.


Release 3.2.7 - September 13 2025
---------------------------------

* Fixed typing issue in ``Workbook()`` constructor.

  :issue:`1152`.


Release 3.2.6 - September 12 2025
---------------------------------

* Added an option to position custom data labels in the same way that the data
  labels can be positioned for the entire series.

  :feature:`1147`.

* Add border, fill, gradient and pattern formatting options for
  chart titles and also chart axis titles.

  :feature:`957`.

* Add additional type annotations. This is an ongoing refactoring.

  :feature:`1123`.


Release 3.2.5 - June 17 2025
----------------------------

* Fixed issue where a test function was made public incorrectly which caused
  warnings about a missing ``xlsxwriter.test`` module.

  :issue:`1138`.


Release 3.2.4 - June 17 2025
----------------------------

* Added support for a :ref:`Color() <Color>` type. This is backwards compatible
  with existing Html and named color string types but also adds support for
  theme colors. See also :ref:`colors`.

* Fixed issue where ``write_url()`` dropped implicit support for generic URL
  types due to the refactoring into a ``Url`` type in the previous release.

  :issue:`1129`.
